--- a/css/layouts/_footer.scss
+++ b/css/layouts/_footer.scss
@@ -22,6 +22,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 50px;
 }
 
 .footer__social-media {
