--- a/css/styles.css
+++ b/css/styles.css
@@ -481,26 +481,28 @@ button:focus,
 
 .icon-github {
   content: url("../../Portfolio-Website/img/icon_github_dark-blue.png");
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
+  transform: scale(0.98);
 }
 
 .icon-github:hover {
   content: url("../../Portfolio-Website/img/icon_github_green.png");
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
+  transform: scale(0.98);
 }
 
 .icon-linkedin {
   content: url("../../Portfolio-Website/img/icon_linkedin.png");
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
 }
 
 .icon-linkedin:hover {
   content: url("../../Portfolio-Website/img/icon_linkedin_green.png");
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
 }
 
 .icon {
@@ -523,6 +525,28 @@ button:focus,
     height: 40px;
     padding-left: 2px;
     position: relative;
+  }
+  .icon-github {
+    content: url("../../Portfolio-Website/img/icon_github_dark-blue.png");
+    width: 40px;
+    height: 40px;
+    transform: scale(0.98);
+  }
+  .icon-github:hover {
+    content: url("../../Portfolio-Website/img/icon_github_green.png");
+    width: 40px;
+    height: 40px;
+    transform: scale(0.98);
+  }
+  .icon-linkedin {
+    content: url("../../Portfolio-Website/img/icon_linkedin.png");
+    width: 40px;
+    height: 40px;
+  }
+  .icon-linkedin:hover {
+    content: url("../../Portfolio-Website/img/icon_linkedin_green.png");
+    width: 40px;
+    height: 40px;
   }
 }
 .nav-list {
@@ -711,6 +735,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 50px;
 }
 
 .footer__social-media {
